{
    "name": "PlayerController",
    "maps": [
        {
            "name": "Gameplay",
            "id": "70205301-9175-43fe-b118-41e83ee64d64",
            "actions": [
                {
                    "name": "Punch",
                    "type": "Value",
                    "id": "21d9adc4-4aa2-4f6a-bb91-a5df1890422d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2258639d-d5df-4085-9e8d-893767fb982e",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Punch",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}